# AViz

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.in  README  README.md  README.rst  TODO  aviz.spec  config.cache  config.h  config.status  configure  configure.in
data/: alox.xyz  aludrop.xyz  diamond.xyz  diamond_code.xyz  logo.xyz  mul-walk.xyz  polymer.xyz  pores.xyz  pores_tab.xyz  rwalk.xyz  sinspin.xyz  van.xyz  van_1.xyz  van_2.xyz  van_3.xyz  van_4.xyz  wedge.xyz
doc/: Makefile  Makefile.in  WARNINGS  aviz.ps  aviz.tex  images.pl  images.tex  index.html  internals.pl  labels.pl  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  (+26 more)
man/: Makefile  Makefile.in  aviz.1  aviz.pod
src/: Makefile  SoAnyThumbWheel.cpp  SoAnyThumbWheel.h  SoQtBasic.h  SoQtThumbWheel.cpp  SoQtThumbWheel.h  aggregateData.h  animationBoard.cpp  animationBoard.h  annotationBoard.cpp  annotationBoard.h  atomBoard.cpp  atomBoard.h  aviz.cpp  aviz.h  aviz.pro  aviz_dev.pro  bondBoard.cpp  bondBoard.h  clipBoard.cpp  clipBoard.h  codeBox.cpp  codeBox.h  colorBoard.cpp  colorBoard.h  colorLabel.cpp  colorLabel.h  customFileDialog.cpp  customFileDialog.h  data.h  defaultParticles.cpp  defaultParticles.h  defaults.h  exceptions.h  explicitBoard.cpp  explicitBoard.h  fileFunctions.cpp  fileFunctions.h  fileListBoard.cpp  fileListBoard.h  (+52 more)
src/bitmaps/: chi.xbm  dolly.xbm  fovyPix.xbm  hand.xbm  hand2.xbm  hand2Mask.xbm  hand2Shift.xbm  hand2ShiftMask.xbm  hand2Zoom.xbm  hand2ZoomMask.xbm  handMask.xbm  theta.xbm
src/pixmaps/: auto.xpm  autoRed.xpm  aviz.xpm  blackBackground.xpm  blackSquare.xpm  blackSquare2.xpm  blueSquare2.xpm  bronzeSquare2.xpm  cartesianAngle.xpm  chi.xpm  dolly.xpm  dollyIn.xpm  dollyInRed.xpm  dollyOut.xpm  dollyOutRed.xpm  down.xpm  downRed.xpm  eulerAngle.xpm  eyeSeparationMinus.xpm  eyeSeparationPlus.xpm  fovy.xpm  fovyPix.xpm  goldSquare2.xpm  graphiteSquare2.xpm  greenSquare2.xpm  home.xpm  homenew.xpm  left.xpm  leftRed.xpm  medium.xpm  mycenterBottomDir.xpm  mycenterTopDir.xpm  mydownDir.xpm  myleftArrow.xpm  myleftDir.xpm  myrightArrow.xpm  myrightDir.xpm  myupDir.xpm  parallel.xpm  perspective.xpm  (+22 more)
src/tests/: fileFunctionsTest.cpp  tests.pro  (+1 more)
util/: start_application.py
(+15 files in other folders)
